k8s/20-customers-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customers-api
  namespace: crypto-shredding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customers-api
  template:
    metadata:
      labels:
        app: customers-api
    spec:
      containers:
        - name: customers-api
          image: customers-api:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: customers-api
  namespace: crypto-shredding
spec:
  selector:
    app: customers-api
  ports:
    - port: 8080
      targetPort: 8080
