k8s/30-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: crypto-shredding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: web:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: crypto-shredding
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
