k8s/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crypto-shredding
  namespace: crypto-shredding
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/customers
            pathType: Prefix
            backend:
              service:
                name: customers-api
                port:
                  number: 8080
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: orders-api
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
